# sharpebench

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  deny.toml  flake.nix  release.toml
.github/workflows/: ci.yml  npm.yml  release.yml
ci/: README.md  ci.yml
crates/sb-attest/: Cargo.toml
crates/sb-attest/src/: lib.rs
crates/sb-cli/: Cargo.toml
crates/sb-cli/src/: main.rs
crates/sb-core/: Cargo.toml
crates/sb-core/src/: attribution.rs  composite.rs  correlation.rs  deflated_sharpe.rs  lib.rs  process.rs  significance.rs  stats.rs
crates/sb-harness/: Cargo.toml
crates/sb-harness/src/: lib.rs
crates/sb-leaderboard/: Cargo.toml
crates/sb-leaderboard/src/: lib.rs
crates/sb-protocol/: Cargo.toml
crates/sb-protocol/src/: lib.rs
crates/sb-sim/: Cargo.toml
crates/sb-sim/src/: agent.rs  costs.rs  data.rs  engine.rs  external.rs  lib.rs  windows.rs
crates/sb-wasm/: Cargo.toml
crates/sb-wasm/src/: lib.rs
crates/sharpebench-attest/src/: canary.rs  lib.rs  registry.rs  sealed.rs
crates/sharpebench-cli/: Cargo.toml  release.toml
crates/sharpebench-cli/src/: main.rs  update.rs
crates/sharpebench-core/: Cargo.toml
crates/sharpebench-core/src/: allocation.rs  briefing.rs  budget_curve.rs  calibration.rs  comparison_sets.rs  composite.rs  decay.rs  disqualification.rs  econrationality.rs  greeks.rs  lib.rs  oos.rs  pass_k.rs  percentile.rs  process.rs  rediscovery.rs  roles.rs  rolling.rs  selfaudit.rs
crates/sharpebench-edge/: Cargo.toml
crates/sharpebench-edge/src/: hlz.rs  lib.rs  mintrl.rs  pbo.rs  verdict.rs
crates/sharpebench-harness/: Cargo.toml
crates/sharpebench-harness/src/: checkpoint.rs  failure.rs  lib.rs
crates/sharpebench-leaderboard/: Cargo.toml
crates/sharpebench-leaderboard/src/: lib.rs
crates/sharpebench-memory/: Cargo.toml
crates/sharpebench-memory/src/: confabulation.rs  lib.rs  multisession.rs  pit.rs  poisoning.rs
crates/sharpebench-protocol/: Cargo.toml
crates/sharpebench-protocol/src/: lib.rs
crates/sharpebench-py/: Cargo.toml  README.md  pyproject.toml
crates/sharpebench-py/python/sharpebench/: __init__.py
crates/sharpebench-py/src/: lib.rs
crates/sharpebench-py/tests/: test_stats.py
crates/sharpebench-sim/: Cargo.toml
crates/sharpebench-sim/src/: agent.rs  costs.rs  data.rs  engine.rs  env.rs  external.rs  lib.rs  trajectory.rs  transport.rs
crates/sharpebench-stats/: Cargo.toml
crates/sharpebench-stats/src/: fdr.rs  lib.rs  selection.rs  significance.rs  stats.rs  stylized_facts.rs
crates/sharpebench-wasm/: Cargo.toml
crates/sharpebench-wasm/src/: lib.rs
data/: README.md  crypto-majors-1d.csv  crypto-majors-1d.csv.sha256  us-indices-1d.csv  us-indices-1d.csv.sha256
docs/: GOVERNANCE.md  PLAN.md  PUBLISHING.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  attestation.md  cli.md  governance.md  integrity.md  introduction.md  methodology-deflated-sharpe.md  methodology-pass-k.md  methodology-process.md  methodology-significance.md  methodology.md  simulator.md  submitting.md  wasm.md  why.md
examples/reference-agent/: Cargo.toml  Dockerfile  README.md  agent.py
examples/reference-agent/src/: main.rs
npm/: README.md  package-lock.json  package.json  tsconfig.json
npm/mcp/: README.md  package-lock.json  package.json
npm/mcp/src/: server.ts
npm/mcp/test/: smoke.test.js
npm/pkg/: package.json  sharpebench.d.ts  sharpebench.js  sharpebench_bg.wasm  sharpebench_bg.wasm.d.ts
npm/src/: index.ts  types.ts
npm/test/: smoke.test.js
scripts/: build-wasm.sh  publish.sh
scripts/ingest/: fetch_binance.py  fetch_fred.py
suites/: example_submissions.json
xtask/: Cargo.toml
xtask/src/: main.rs
