[package]
name = "sb-attest"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SharpeBench forward-attestation: pre-registration, time-locked commits, signed verifiable results (Phase 2)."
repository = "https://github.com/general-liquidity/sharpebench"

[dependencies]
sb-core = { path = "../sb-core" }
