[package]
name = "sb-attest"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SharpeBench forward-attestation: pre-registration commitments + signed, verifiable result chains."
repository = "https://github.com/general-liquidity/sharpebench"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
