[package]
name = "sb-attest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench forward-attestation: pre-registration commitments + signed, verifiable result chains."
repository.workspace = true
keywords = ["attestation", "commitment", "hmac", "benchmark", "integrity"]
categories = ["cryptography", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"

[lints]
workspace = true
