[package]
name = "sb-cli"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SharpeBench command-line interface."
repository = "https://github.com/general-liquidity/sharpebench"

[[bin]]
name = "sharpebench"
path = "src/main.rs"

[dependencies]
sb-core = { path = "../sb-core", version = "0.0.1" }
sb-sim = { path = "../sb-sim", version = "0.0.1" }
sb-harness = { path = "../sb-harness", version = "0.0.1" }
sb-attest = { path = "../sb-attest", version = "0.0.1" }
sb-leaderboard = { path = "../sb-leaderboard", version = "0.0.1" }
serde_json = "1"
