[package]
name = "sharpebench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench command-line interface."
repository.workspace = true

[[bin]]
name = "sharpebench"
path = "src/main.rs"

[dependencies]
sb-core = { package = "sharpebench-core", path = "../sb-core", version = "0.0.1" }
sb-sim = { package = "sharpebench-sim", path = "../sb-sim", version = "0.0.1" }
sb-harness = { package = "sharpebench-harness", path = "../sb-harness", version = "0.0.1" }
sb-attest = { package = "sharpebench-attest", path = "../sb-attest", version = "0.0.1" }
sb-leaderboard = { package = "sharpebench-leaderboard", path = "../sb-leaderboard", version = "0.0.1" }
serde = "1"
serde_json = "1"

[lints]
workspace = true
