[package]
name = "sharpebench-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench orchestration: drive an agent over seeds × windows and capture trajectories (Phase 1)."
repository.workspace = true

[dependencies]
sb-core = { package = "sharpebench-core", path = "../sb-core", version = "0.0.1" }
sb-protocol = { package = "sharpebench-protocol", path = "../sb-protocol", version = "0.0.1" }
sb-sim = { package = "sharpebench-sim", path = "../sb-sim", version = "0.0.1" }

[lints]
workspace = true
