[package]
name = "sb-leaderboard"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SharpeBench leaderboard rendering + tamper-evident signed result chain."
repository = "https://github.com/general-liquidity/sharpebench"

[dependencies]
sb-core = { path = "../sb-core", version = "0.0.1" }
sb-attest = { path = "../sb-attest", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
