[package]
name = "sb-leaderboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench leaderboard rendering + tamper-evident signed result chain."
repository.workspace = true

[dependencies]
sb-core = { path = "../sb-core", version = "0.0.1" }
sb-attest = { path = "../sb-attest", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
