[package]
name = "sb-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench language-agnostic agent ⇄ harness protocol (JSON message types)."
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
