[package]
name = "sb-sim"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SharpeBench point-in-time market simulator + reference agents (Phase 1)."
repository = "https://github.com/general-liquidity/sharpebench"

[dependencies]
sb-core = { path = "../sb-core" }
sb-protocol = { path = "../sb-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
