[package]
name = "sb-sim"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SharpeBench point-in-time market simulator + reference agents (Phase 1)."
repository = "https://github.com/general-liquidity/sharpebench"
keywords = ["benchmark", "trading", "backtest", "simulation", "quant"]
categories = ["science", "finance", "simulation"]

[dependencies]
sb-core = { path = "../sb-core", version = "0.0.1" }
sb-protocol = { path = "../sb-protocol", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
