[package]
name = "sharpebench-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench point-in-time market simulator + reference agents (Phase 1)."
repository.workspace = true
keywords = ["benchmark", "trading", "backtest", "simulation", "quant"]
categories = ["science", "finance", "simulation"]

[dependencies]
sb-core = { package = "sharpebench-core", path = "../sb-core", version = "0.0.1" }
sb-protocol = { package = "sharpebench-protocol", path = "../sb-protocol", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
