[package]
name = "sb-wasm"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM bindings for the SharpeBench scoring kernel (consumed by Gordon/Bun via the identical kernel)."
repository = "https://github.com/general-liquidity/sharpebench"

[dependencies]
sb-core = { path = "../sb-core", version = "0.0.1" }
serde_json = "1"

# wasm-bindgen is pulled in ONLY when building for the wasm target, so native
# host builds (and CI) never compile it — they test `score_json` directly.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
