[package]
name = "sharpebench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench command-line interface."
repository.workspace = true

[[bin]]
name = "sharpebench"
path = "src/main.rs"

[dependencies]
sharpebench-core = { path = "../sharpebench-core", version = "0.0.1" }
sharpebench-sim = { path = "../sharpebench-sim", version = "0.0.1" }
sharpebench-harness = { path = "../sharpebench-harness", version = "0.0.1" }
sharpebench-attest = { path = "../sharpebench-attest", version = "0.0.1" }
sharpebench-leaderboard = { path = "../sharpebench-leaderboard", version = "0.0.1" }
serde = "1"
serde_json = "1"

[lints]
workspace = true
