[package]
name = "sharpebench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench command-line interface."
repository.workspace = true

[[bin]]
name = "sharpebench"
path = "src/main.rs"

[dependencies]
sharpebench-core = { path = "../sharpebench-core", version = "0.0.11" }
sharpebench-protocol = { path = "../sharpebench-protocol", version = "0.0.11" }
sharpebench-sim = { path = "../sharpebench-sim", version = "0.0.11" }
sharpebench-harness = { path = "../sharpebench-harness", version = "0.0.11" }
sharpebench-attest = { path = "../sharpebench-attest", version = "0.0.11" }
sharpebench-leaderboard = { path = "../sharpebench-leaderboard", version = "0.0.11" }
sharpebench-edge = { path = "../sharpebench-edge", version = "0.0.11" }
serde = "1"
serde_json = "1"

# Opt-in self-update + version-check stack. Off by default so the published CLI and
# the musl static binary stay dependency-free; mirrors xtask's ring-free TLS choice
# (native-tls = OS TLS), so it adds no new crates to the workspace supply chain.
ureq = { version = "2", default-features = false, features = ["native-tls"], optional = true }
native-tls = { version = "0.2", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
self-update = ["dep:ureq", "dep:native-tls", "dep:sha2"]

[lints]
workspace = true
