[package]
name = "sharpebench-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic, luck-robust scoring kernel for SharpeBench (deflated Sharpe / PSR / pass^k / process / decay)."
repository.workspace = true
keywords = ["benchmark", "trading", "sharpe", "quant", "evaluation"]
categories = ["science", "finance"]

[dependencies]
serde = { version = "1", features = ["derive"] }
sharpebench-stats = { path = "../sharpebench-stats", version = "0.0.10" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
