[package]
name = "sharpebench-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench orchestration: drive an agent over seeds × windows and capture trajectories (Phase 1)."
repository.workspace = true

[dependencies]
sharpebench-core = { path = "../sharpebench-core", version = "0.0.1" }
sharpebench-protocol = { path = "../sharpebench-protocol", version = "0.0.1" }
sharpebench-sim = { path = "../sharpebench-sim", version = "0.0.1" }

[lints]
workspace = true
