[package]
name = "sharpebench-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench orchestration: drive an agent over seeds × windows and capture trajectories (Phase 1)."
repository.workspace = true

[dependencies]
sharpebench-core = { path = "../sharpebench-core", version = "0.0.13" }
sharpebench-protocol = { path = "../sharpebench-protocol", version = "0.0.13" }
sharpebench-sim = { path = "../sharpebench-sim", version = "0.0.13" }
serde = { version = "1", features = ["derive"] }
# `float_roundtrip`: the checkpoint persists each Run's f64 return series, and a
# resumed sweep must reload it bit-identically to an uninterrupted one (determinism
# + attestation). serde_json's default parser can land 1 ULP off; this feature makes
# parse the exact inverse of serialize.
serde_json = { version = "1", features = ["float_roundtrip"] }

[lints]
workspace = true
