[package]
name = "sharpebench-leaderboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SharpeBench leaderboard rendering + tamper-evident signed result chain."
repository.workspace = true

[dependencies]
sharpebench-core = { path = "../sharpebench-core", version = "0.0.13" }
sharpebench-attest = { path = "../sharpebench-attest", version = "0.0.13" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
