# Standalone (not a workspace member): a pyo3 extension-module needs a Python
# interpreter at build time, so it is built by maturin rather than `cargo --workspace`.
# Concrete fields (no `.workspace` inheritance) since it sits outside the workspace;
# the version here and in pyproject.toml are rewritten from the workspace version by
# the pre-release-replacements in crates/sharpebench-cli/release.toml.
[package]
name = "sharpebench-py"
version = "0.0.12"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings (pyo3) for SharpeBench's honest-backtest statistics."
repository = "https://github.com/general-liquidity/sharpebench"

[lib]
name = "sharpebench_py"
crate-type = ["cdylib"]

[dependencies]
sharpebench-stats = { path = "../sharpebench-stats", version = "0.0.12" }
sharpebench-edge = { path = "../sharpebench-edge", version = "0.0.12" }
sharpebench-core = { path = "../sharpebench-core", version = "0.0.12" }

[dependencies.pyo3]
version = "0.29"
features = ["extension-module"]
