[package]
name = "sharpebench-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for the SharpeBench scoring kernel (consumed by Gordon/Bun via the identical kernel)."
repository.workspace = true

[dependencies]
sharpebench-core = { path = "../sharpebench-core", version = "0.0.6" }
sharpebench-attest = { path = "../sharpebench-attest", version = "0.0.6" }
serde = "1"
serde_json = "1"

# wasm-bindgen is pulled in ONLY when building for the wasm target, so native
# host builds (and CI) never compile it — they test `score_json` directly.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
